Fix width of todo on mobile view

--- a/src/components/Todo/Todo.css
+++ b/src/components/Todo/Todo.css
@@ -27,3 +27,9 @@
     color: #8A9499;
     cursor: pointer;
 }
+
+@media only screen and (max-width: 850px) {
+    .todo-wrapper {
+        width: 40vw;
+    }
+}
